--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!-- TÄÄ TIEDOSTO TOIMII PELKÄSTÄÄN FLASK YHTEYDEN KAUTTA -->
 <!DOCTYPE html>
 <!-- Kieli on suomi -->
 <html lang="fi">
@@ -6,7 +7,8 @@
     <!-- Viewportin avulla sivu skaalautuu laitteelle sopivaksi -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opikku</title>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   </head>
   <body>
     <!-- Headerin sisältö (eka osio sivusta) -->
@@ -43,7 +45,8 @@
         <div class="dropdown">
           <button class="game-button dropbtn">Kertolaskut</button>
           <div class="dropdown-content">
-            <a href="peli1.html">1 kertotaulu</a>
+            <!-- <a href="peli1.html">1 kertotaulu</a> -->
+            <a href="{{ url_for('peli1') }}">1 kertotaulu</a>
             <a href="#">2 kertotaulu</a>
             <a href="#">3 kertotaulu</a>
             <a href="#">4 kertotaulu</a>
