--- a/templates/index.html
+++ b/templates/index.html
@@ -45,17 +45,16 @@
         <div class="dropdown">
           <button class="game-button dropbtn">Kertolaskut</button>
           <div class="dropdown-content">
-            <!-- <a href="peli1.html">1 kertotaulu</a> -->
-            <a href="{{ url_for('peli1') }}">1 kertotaulu</a>
-            <a href="#">2 kertotaulu</a>
-            <a href="#">3 kertotaulu</a>
-            <a href="#">4 kertotaulu</a>
-            <a href="#">5 kertotaulu</a>
-            <a href="#">6 kertotaulu</a>
-            <a href="#">7 kertotaulu</a>
-            <a href="#">8 kertotaulu</a>
-            <a href="#">9 kertotaulu</a>
-            <a href="#">10 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=1) }}">1 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=2) }}">2 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=3) }}">3 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=4) }}">4 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=5) }}">5 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=6) }}">6 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=7) }}">7 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=8) }}">8 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=9) }}">9 kertotaulu</a>
+            <a href="{{ url_for('peli', pelin_id=10) }}">10 kertotaulu</a>
           </div>
         </div>
         <div class="dropdown">
