Säädetty vähä kuvan kanssa mutta tuloksetta :sob:

--- a/static/styles.css
+++ b/static/styles.css
@@ -26,8 +26,10 @@ header, body {
 .header-top {
   display: flex;
   justify-content: space-between;
-  align-items: center; /* Asettaa elementit pystysuunnassa keskelle */
+  align-items: left; /* Asettaa elementit pystysuunnassa keskelle */
+  
 }
+
 
 /* Sivuston otsikko */
 .site-title {
