--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opikku</title>
     <!-- <link rel="stylesheet" href="styles.css" /> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='mathMenu.css') }}">
   </head>
   <body>
     <!-- Headerin sisältö (eka osio sivusta) -->
