--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opikku</title>
     <!-- <link rel="stylesheet" href="styles.css" /> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='mathMenu.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='menu.css') }}">
   </head>
   <body>
     <!-- Headerin sisältö (eka osio sivusta) -->
@@ -38,11 +38,6 @@
     <!-- Pelivalikko (toka osio sivulla)-->
     <section class="games-section">
       <div class="games-container">
-        <!-- button
-          class="game-button"
-          tabindex="0"
-          onclick="window.location.href='peli1.html';"
-        >Peli 1</button> -->
         <div class="dropdown">
           <button class="game-button dropbtn">Kertolaskut</button>
           <div class="dropdown-content">
