--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -38,6 +38,11 @@
     <!-- Pelivalikko (toka osio sivulla)-->
     <section class="games-section">
       <div class="games-container">
+        <!-- button
+          class="game-button"
+          tabindex="0"
+          onclick="window.location.href='peli1.html';"
+        >Peli 1</button> -->
         <div class="dropdown">
           <button class="game-button dropbtn">Kertolaskut</button>
           <div class="dropdown-content">
