--- a/templates/gameScreen1.html
+++ b/templates/gameScreen1.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Peli 1</title>
     <!--
-    <link rel="stylesheet" href="gameScreen1.css"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='gameScreen1.css') }}"> 
+    <link rel="stylesheet" href="peli1.css"> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='peli1.css') }}"> 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -21,7 +21,7 @@
         </header>
         <main class="content-area">
             <section class="main-content">
-              <a href="{{ url_for('mathMenu3rdGrade') }}">
+              <a href="{{ url_for('index') }}">
                 <button class="small-icon-button" aria-label="Action">
                     <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/ac24ec8f1f19b53f03cb818be4b1973dda8fad9cfa23067bf47b00d7fa6658ab?placeholderIfAbsent=true&apiKey=d4a6829ab0a243af995c418502f3ed93"
                         class="icon-image" alt="Takaisin" />
