--- a/templates/gameScreen1.html
+++ b/templates/gameScreen1.html
@@ -6,7 +6,7 @@
     <title>Peli 1</title>
     <!--
     <link rel="stylesheet" href="peli1.css"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='peli1.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='gameScreen1.css') }}"> 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
