--- a/templates/mathMenu5rdGrade.html
+++ b/templates/mathMenu5rdGrade.html
@@ -1,3 +1,4 @@
+<!-- TÄÄ TIEDOSTO TOIMII PELKÄSTÄÄN FLASK YHTEYDEN KAUTTA -->
 <!DOCTYPE html>
 <!-- Kieli on suomi -->
 <html lang="fi">
@@ -23,10 +24,10 @@
           <div class="dropdown">
             <button class="dropbtn">Matematiikka</button>
             <div class="dropdown-content">
-              <a href="{{ url_for('math_menu', grade=3) }}">3. luokka</a>
-              <a href="{{ url_for('math_menu', grade=4) }}">4. luokka</a>
-              <a href="{{ url_for('math_menu', grade=5) }}">5. luokka</a>
-              <a href="{{ url_for('math_menu', grade=6) }}">6. luokka</a>
+              <a href="#">3. luokka</a>
+              <a href="#">4. luokka</a>
+              <a href="#">5. luokka</a>
+              <a href="#">6. luokka</a>
             </div>
           </div>
           <!-- Tulossa-nappi -->
