etusivu ja valikon toimivuus

--- a/templates/firstscreen.html
+++ b/templates/firstscreen.html
@@ -44,8 +44,8 @@ button + button {
 </style>
 <body>
     <div class="container">
-        <button onclick="location.href='OpettajaLogIn.html'">Opettaja</button>
-        <button onclick="location.href='OppilasLogIn.html'">Oppilas</button>
+        <button onclick="location.href='teacherLogIn.html'">Opettaja</button>
+        <button onclick="location.href='studentLogIn.html'">Oppilas</button>
     </div>
 </body>
 </html>
