nyt toimii linkit kaikkialle

--- a/templates/teacherLogIn.html
+++ b/templates/teacherLogIn.html
@@ -30,6 +30,9 @@
                 <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Salasana uudelleen" required>
                 <span id="passwordError" style="color: red; display: none;">Salasanat eivät täsmää!</span>
                 <button type="submit" onclick="return checkPassword()">Rekisteröidy</button>
+                <a href="{{ url_for('etusivu') }}">
+                    <button class="game-button">Etusivu</button>
+                </a>
             </form>
         </div>
     </div>
