--- a/templates/teacherLogIn.html
+++ b/templates/teacherLogIn.html
@@ -31,7 +31,7 @@
                 <span id="passwordError" style="color: red; display: none;">Salasanat eivät täsmää!</span>
                 <button type="submit" onclick="return checkPassword()">Rekisteröidy</button>
                 <a href="{{ url_for('etusivu') }}">
-                    <button class="game-button">Etusivu</button>
+                    <button>Etusivu</button>
                 </a>
             </form>
         </div>
