--- a/templates/studentLogIn.html
+++ b/templates/studentLogIn.html
@@ -18,7 +18,7 @@
                 <input type="password" placeholder="Salasana"> #required
                 <button type="submit">Kirjaudu</button>
                 <a href="{{ url_for('etusivu') }}">
-                    <button class="game-button">Etusivu</button>
+                    <button>Etusivu</button>
                 </a>
             </form>
         </div>
