--- a/templates/studentLogIn.html
+++ b/templates/studentLogIn.html
@@ -14,31 +14,28 @@
         <div class="form-container login-form" id="loginForm" style="left: 0;">
             <form class="form">
                 <h2>Kirjaudu sisään</h2>
-                <input type="text" placeholder="Käyttäjätunnus"> #required
-                <input type="password" placeholder="Salasana"> #required
+                <input type="text" placeholder="Käyttäjätunnus" required>
+                <input type="password" placeholder="Salasana" required>
                 <button type="submit">Kirjaudu</button>
-                <a href="{{ url_for('etusivu') }}">
-                    <button>Etusivu</button>
-                </a>
             </form>
         </div>
         
         <div class="form-container register-form" id="registerForm" style="right: 0;">
             <form class="form">
                 <h2>Rekisteröidy</h2>
-                <input type="text" placeholder="Etunimi" >
-                <input type="text" placeholder="Sukunimi"
-                <input type="date" placeholder="Syntymäpäivä" >
-                    <select id="class" name="class" >
+                <input type="text" placeholder="Etunimi" required>
+                <input type="text" placeholder="Sukunimi" required>
+                <input type="date" placeholder="Syntymäpäivä" required>
+                    <select id="class" name="class" required>
                         <option value="" disabled selected>Valitse luokkasi</option>
                         <option value="3">3. luokka</option>
                         <option value="4">4. luokka</option>
                         <option value="5">5. luokka</option>
                         <option value="6">6. luokka</option>
                     </select>
-                <input type="text" placeholder="Käyttäjätunnus" >
-                <input type="password" id="password" name="password" placeholder="Salasana" >
-                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Salasana uudelleen" >
+                <input type="text" placeholder="Käyttäjätunnus" required>
+                <input type="password" id="password" name="password" placeholder="Salasana" required>
+                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Salasana uudelleen" required>
                 <span id="passwordError" style="color: red; display: none;">Salasanat eivät täsmää!</span>
                 <button type="submit" onclick="return checkPassword()">Rekisteröidy</button>
             </form>
