--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -13,8 +13,7 @@
     <!-- Headerin sisältö (eka osio sivusta) -->
     <header class="header-section" >
       <div class="header-top">
-        
-        <h1 class="site-title" >OPIKKU</h1>
+        <img class="site-title" src="{{ url_for('static', filename='Kuvat/LogoWhite.png') }}" alt="Logo valkoinen">
         <div class="avatar-placeholder"></div>
       </div>
       <div class="header-bottom">
