--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -14,7 +14,7 @@
     <header class="header-section" >
       <div class="header-top">
         
-        <h1 class="site-title" >OPIKKU</h1>
+        <img class="site-title" src="{{ url_for('static', filename='Kuvat/LogoWhite.png') }}" alt="Logo valkoinen">
         <div class="avatar-placeholder"></div>
       </div>
       <div class="header-bottom">
