--- a/templates/mathMenu4rdGrade.html
+++ b/templates/mathMenu4rdGrade.html
@@ -45,7 +45,10 @@
         >Peli 1</button> -->
         <div class="dropdown">
           <button class="game-button">4 luokka peli 1</button>
-          </div>
+        </div>
+        <a href="{{ url_for('peli', pelin_id=19) }}">
+          <button class="game-button">Testi</button>
+        </a>
       </div>
     </section>
   </body>
