--- a/static/LogInStyles.css
+++ b/static/LogInStyles.css
@@ -6,7 +6,7 @@
     font-family: Arial, sans-serif;
 }
 
-/* Kehon tyylit */
+/* Rungon tyylit */
 body {
     display: flex;
     justify-content: center;
