--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -13,7 +13,7 @@
     <!-- Headerin sisältö (eka osio sivusta) -->
     <header class="header-section" >
       <div class="header-top">
-        <img class="site-title" src="{{ url_for('static', filename='Kuvat/LogoWhite.png') }}" alt="Logo valkoinen">
+        <img class="site-title" src="{{ url_for('static', filename='Kuvat/logoWhite.png') }}" alt="Logo valkoinen">
         <div class="avatar-placeholder"></div>
       </div>
       <div class="header-bottom">
@@ -35,7 +35,8 @@
     </header>
     <!-- Pelivalikko (toka osio sivulla)-->
     <section class="games-section">
-      <h1>ETUSIVU</h1>
+      <!-- Etusivulla oleva kuva ja sen koko.-->
+      <img class="site-title" src="{{ url_for('static', filename='kuvat/frontPageIlust.png') }}" alt="Kuva Opikkun hahmoista tietokoneella" style="height: 90%;">
     </section>
   </body>
 </html>
