Class muutettu omakseen, site-illustration

--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -36,7 +36,7 @@
     <!-- Pelivalikko (toka osio sivulla)-->
     <section class="games-section">
       <!-- Etusivulla oleva kuva ja sen koko.-->
-      <img class="site-title" src="{{ url_for('static', filename='kuvat/frontPageIlust.png') }}" alt="Kuva Opikkun hahmoista tietokoneella" style="height: 90%;">
+      <img class="site-illustration" src="{{ url_for('static', filename='kuvat/frontPageIlust.png') }}" alt="Kuva Opikkun hahmoista tietokoneella" style="height: 90%;">
     </section>
   </body>
 </html>
