--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -14,6 +14,7 @@
     <header class="header-section" >
       <div class="header-top">
         <img class="site-title" src="{{ url_for('static', filename='Kuvat/logoWhite.png') }}" alt="Logo valkoinen">
+        <a href="{{ url_for('logout') }}" class="logout-button">Kirjaudu ulos</a>
         <div class="avatar-placeholder"></div>
       </div>
       <div class="header-bottom">
