etusivu nappi lisätty valikkoon

--- a/templates/mathMenu5rdGrade.html
+++ b/templates/mathMenu5rdGrade.html
@@ -19,6 +19,9 @@
       </div>
       <div class="header-bottom">
         <div class="nav-buttons">
+          <a href="{{ url_for('frontPage') }}">
+            <button class="coming-soon-btn">Etusivu</button>
+          </a>
           <!-- Matematiikka-nappi ja alasvetovalikko -->
           <div class="dropdown">
             <button class="dropbtn">Matematiikka</button>
